# axum-web-api-kickstart

./: .env  .env_test  .env_test_docker  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: ci.yml
db/migrations/: 20231113222801_db.sql
src/: auth.rs  config.rs  lib.rs  main.rs  state.rs  user.rs  users.rs
src/api/: auth.rs  mod.rs  router.rs  users.rs
src/application/: api_error.rs  api_version.rs  app.rs  app_const.rs  config.rs  mod.rs  redis_service.rs  state.rs
src/application/repository/: mod.rs  user_repo.rs  user_repository.rs
src/application/security/: auth_error.rs  jwt_auth.rs  jwt_claims.rs  mod.rs  roles.rs
src/application/shared/: config.rs
src/domain/models/: user.rs
src/infrastructure/postgres/: connection.rs  mod.rs
src/infrastructure/postgres/migrations/: 20231113222801_db.sql
src/infrastructure/postgres/queries/: list_users.sql
src/infrastructure/redis/: connection.rs  mod.rs
src/model/: user.rs
src/repository/: user_repository.rs
src/shared/: config.rs  mod.rs  state.rs
tests/: auth_expire_tests.rs  auth_login_test.rs  auth_logout_test.rs  auth_refresh_tests.rs  auth_revoke_tests.rs  auth_test.rs  endpoints.http  endpoints.rs  heartbeat.rs  heartbeat_test.rs  jwt_auth.rs  jwt_auth_test.rs  user_crud_tests.rs  users_test.rs
tests/common/: auth.rs  fetch.rs  mod.rs  route.rs  test_config.rs  users.rs  utils.rs
