[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Web samples using axum"
readme = "README.md"
repository = "https://github.com/sheroz/axum-web"
license = "MIT"

[dependencies]
dotenv = "0.15"
axum = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = { version = "0.1" }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

[dev-dependencies]
reqwest = { version = "0.11" }