[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Kick-start template for building REST API Web service in Rust using axum, JWT, SQLx, PostgreSQL, and Redis"
readme = "README.md"
repository = "https://github.com/sheroz/axum-web"
license = "MIT"

[dependencies]
dotenv = "0.15"
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = { version = "0.1" }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
chrono = { version = "0.4", features = ["serde"] }

redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }

jsonwebtoken = { version = "9.2" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"]}
